--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -8,6 +8,7 @@
     tools:context=".ui.dashboard.transactions.detailTransaction.DetailActivity">
 
     <FrameLayout
+        android:id="@+id/host_detail_activity"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
