--- a/app/src/main/res/layout/fragment_diproses.xml
+++ b/app/src/main/res/layout/fragment_diproses.xml
@@ -704,7 +704,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
-                android:fontFamily="@font/roboto_bold"
+                android:fontFamily="@font/roboto_medium"
                 android:text="@string/lokasi_pelanggan"
                 android:textColor="@color/font_default"
                 android:textSize="16sp"
@@ -753,7 +753,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="12dp"
-                android:fontFamily="@font/roboto_bold"
+                android:fontFamily="@font/roboto_medium"
                 android:text="@string/metode_pembayaran"
                 android:textColor="@color/font_default"
                 android:textSize="16sp"
