--- a/app/src/main/res/layout/fragment_detail_shop.xml
+++ b/app/src/main/res/layout/fragment_detail_shop.xml
@@ -50,7 +50,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/roboto_bold"
-                        android:text="PT Sukses Jaya"
+                        tools:text="PT Sukses Jaya"
                         android:layout_marginStart="12dp"
                         android:layout_marginTop="16dp"
                         android:textColor="@color/font_default"
@@ -182,7 +182,7 @@
                                         android:layout_height="wrap_content"
                                         android:layout_marginStart="6dp"
                                         android:fontFamily="@font/roboto_bold"
-                                        android:text="4.8"
+                                        tools:text="4.8"
                                         android:textColor="@color/colorPrimaryDark"
                                         android:textSize="16sp" />
 
@@ -195,7 +195,7 @@
                                     android:layout_height="wrap_content"
                                     android:layout_marginTop="4dp"
                                     android:fontFamily="@font/roboto"
-                                    android:text="23 Ulasan"
+                                    tools:text="23 Ulasan"
                                     android:textColor="@color/font_default"
                                     android:textSize="12sp" />
 
@@ -217,7 +217,7 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="20dp"
                 android:fontFamily="@font/roboto_bold"
-                android:text="Rp. 200.000"
+                tools:text="Rp. 200.000"
                 android:textColor="@color/font_default"
                 android:textSize="16sp"
                 app:layout_constraintStart_toStartOf="parent"
@@ -230,7 +230,7 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="6dp"
                 android:fontFamily="@font/roboto"
-                android:text="Kebersihan"
+                tools:text="Kebersihan"
                 android:textColor="@color/fontDetailMitra"
                 android:textSize="12sp"
                 app:layout_constraintStart_toStartOf="parent"
@@ -243,7 +243,7 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="6dp"
                 android:fontFamily="@font/roboto"
-                android:text="Bergabung sejak 7 Mei 2020"
+                tools:text="Bergabung sejak 7 Mei 2020"
                 android:textColor="@color/fontDetailMitra"
                 android:textSize="12sp"
                 app:layout_constraintStart_toStartOf="parent"
@@ -274,7 +274,7 @@
                 android:ellipsize="end"
                 android:fontFamily="@font/roboto"
                 android:paddingEnd="12dp"
-                android:text="Jalan Ngaliyan No. 123, Semarang"
+                tools:text="Jalan Ngaliyan No. 123, Semarang"
                 android:textColor="@color/font_default"
                 android:textSize="12sp"
                 app:layout_constraintEnd_toStartOf="@+id/btn_lihat_lokasi"
