--- a/mitrailifeapps/src/main/res/layout/activity_splash_screen.xml
+++ b/mitrailifeapps/src/main/res/layout/activity_splash_screen.xml
@@ -22,7 +22,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/roboto"
-        android:text="by i-bunda"
+        android:text="@string/by_i_bunda"
         android:textColor="@color/colorBackground"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
