--- a/mitrailifeapps/src/main/res/values/colors.xml
+++ b/mitrailifeapps/src/main/res/values/colors.xml
@@ -1,35 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
+    <color name="purple_500">#1A8ED7</color>
+    <color name="purple_700">#1A8ED7</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
-    <color name="colorPrimaryDark">#1A8ED7</color>
     <color name="colorPrimary">#36B5FE</color>
-    <color name="colorAccent">#36B5FE</color>
+    <color name="colorAccent">#03DAC5</color>
     <color name="colorBackground">#F8F8F8</color>
+    <color name="colorPrimaryDark">#1A8ED7</color>
+    <color name="colorBlue20">#CBE2F1</color>
 
     <color name="mtrl_textinput_default_box_stroke_color" tools:override="true">@color/colorPrimaryDark</color>
 
     <color name="font_splash">#979797</color>
     <color name="font_landing">#7D7D7D</color>
     <color name="lines">#707070</color>
-    <color name="colorLine">#E4E4E4</color>
-    <color name="colorLine8">#E8E8E8</color>
-    <color name="font_default">#606060</color>
+    <color name="colorLine">#BDBDBD</color>
+    <color name="colorLine8">#E0E0E0</color>
+    <color name="font_default">#333333</color>
     <color name="font_text_input_layout">#3F51B5</color>
     <color name="colorRating">#FFB430</color>
     <color name="fontDetailMitra">#cacaca</color>
-    <color name="fontulasan">#949494</color>
+    <color name="fontulasan">#828282</color>
+
 
     <color name="bgChat">#E8E8E8</color>
     <color name="fontDiskon">#A2A2A2</color>
     <color name="btnDefault">#ACACAC</color>
     <color name="bgNotification">#E2F4FF</color>
     <color name="fontStory">#808080</color>
+    <color name="bgChatNotif">#E3EEF5</color>
+    <color name="bgPrice">#CBE2F1</color>
+
+
+    <color name="placeholder">#6FB6B6B6</color>
+    <color name="colorDisabled">#D3D3D3</color>
 
 </resources>
