--- a/mitrailifeapps/src/main/res/values/themes.xml
+++ b/mitrailifeapps/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.ILifeApps" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.ILifeApps" parent="Theme.MaterialComponents.Light.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
@@ -19,7 +19,8 @@
     <style name="ButtonStyle">
         <item name="android:layout_width">match_parent</item>
         <item name="android:textAllCaps">false</item>
-        <item name="android:fontFamily">@font/roboto_medium</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:fontFamily">@font/roboto_bold</item>
         <item name="android:background">@drawable/bg_btn_blue</item>
         <item name="android:textColor">@android:color/white</item>
     </style>
@@ -54,7 +55,7 @@
     </style>
 
     <style name="tab_text_xxhdpi" parent="@android:style/TextAppearance.Widget.TabWidget">
-        <item name="android:fontFamily">@font/roboto</item>
+        <item name="android:fontFamily">@font/roboto_medium</item>
         <item name="android:textSize">14sp</item>
     </style>
 
