--- a/mitrailifeapps/src/main/res/layout/activity_detail.xml
+++ b/mitrailifeapps/src/main/res/layout/activity_detail.xml
@@ -4,6 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorBackground"
     tools:context=".ui.detailorder.DetailActivity">
+
+    <FrameLayout
+        android:id="@+id/host_detail_activity"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
