--- a/mitrailifeapps/src/main/res/layout/fragment_dialog_seleksi_berdasarkan.xml
+++ b/mitrailifeapps/src/main/res/layout/fragment_dialog_seleksi_berdasarkan.xml
@@ -111,6 +111,7 @@
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_pilih_kategori"
         style="@style/ButtonStyle"
+        app:cornerRadius="8dp"
         android:layout_marginStart="0dp"
         android:layout_marginEnd="0dp"
         android:layout_marginTop="32dp"
