--- a/mitrailifeapps/src/main/res/layout/fragment_dialog_tolak_pesanan.xml
+++ b/mitrailifeapps/src/main/res/layout/fragment_dialog_tolak_pesanan.xml
@@ -110,9 +110,8 @@
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_tolak_pesanan"
         style="@style/ButtonStyle"
-        android:layout_marginStart="16dp"
+        app:cornerRadius="8dp"
         android:layout_marginTop="32dp"
-        android:layout_marginEnd="16dp"
         android:text="@string/tolak_pekerjaan"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
