--- a/mitrailifeapps/src/main/res/layout/fragment_edit_shop.xml
+++ b/mitrailifeapps/src/main/res/layout/fragment_edit_shop.xml
@@ -391,6 +391,7 @@
         android:id="@+id/btn_simpan_kemampuan"
         style="@style/ButtonStyle"
         android:visibility="gone"
+        app:cornerRadius="8dp"
         android:layout_marginBottom="40dp"
         android:text="@string/simpan_perubahan"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -401,6 +402,7 @@
         android:id="@+id/btn_simpan_shop"
         style="@style/ButtonStyle"
         android:visibility="gone"
+        app:cornerRadius="8dp"
         android:layout_marginBottom="40dp"
         android:text="@string/simpan_perubahan"
         app:layout_constraintBottom_toBottomOf="parent"
