--- a/app/src/main/res/layout/fragment_detail_shop.xml
+++ b/app/src/main/res/layout/fragment_detail_shop.xml
@@ -54,7 +54,7 @@
                         android:layout_marginStart="12dp"
                         android:layout_marginTop="16dp"
                         android:textColor="@color/font_default"
-                        android:textSize="20sp"
+                        android:textSize="22sp"
                         app:layout_constraintStart_toEndOf="@+id/ic_back"
                         app:layout_constraintTop_toTopOf="parent" />
 
@@ -69,6 +69,16 @@
                         app:layout_constraintStart_toEndOf="@+id/tv_nama_mitra"
                         app:layout_constraintTop_toTopOf="@+id/tv_nama_mitra" />
 
+                    <View
+                        android:id="@+id/view1"
+                        android:layout_width="match_parent"
+                        android:layout_height="2dp"
+                        android:layout_marginTop="16dp"
+                        android:background="@color/colorLine"
+                        app:layout_constraintTop_toBottomOf="@id/tv_nama_mitra"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="@+id/ic_back" />
+
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
             </LinearLayout>
@@ -77,7 +87,7 @@
                 android:id="@+id/linearLayout11"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="16dp"
                 style="@style/Responsive16dp"
                 android:orientation="horizontal"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -132,7 +142,7 @@
                                     android:fontFamily="@font/roboto_bold"
                                     android:text="700 m"
                                     android:textColor="@color/colorPrimaryDark"
-                                    android:textSize="16sp" />
+                                    android:textSize="18sp" />
 
                                 <TextView
                                     android:layout_width="wrap_content"
@@ -141,13 +151,13 @@
                                     android:fontFamily="@font/roboto"
                                     android:text="dari Anda"
                                     android:textColor="@color/font_default"
-                                    android:textSize="12sp" />
+                                    android:textSize="14sp" />
 
                             </LinearLayout>
 
                             <View
                                 android:id="@+id/view3"
-                                android:layout_width="1.25dp"
+                                android:layout_width="1.5dp"
                                 android:layout_height="match_parent"
                                 android:background="#EBEEF7"
                                 android:orientation="vertical"
@@ -169,6 +179,7 @@
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_gravity="start"
+                                    android:gravity="center_vertical"
                                     android:orientation="horizontal">
 
                                     <ImageView
@@ -184,10 +195,9 @@
                                         android:fontFamily="@font/roboto_bold"
                                         tools:text="4.8"
                                         android:textColor="@color/colorPrimaryDark"
-                                        android:textSize="16sp" />
+                                        android:textSize="18sp" />
 
                                 </LinearLayout>
-
 
                                 <TextView
                                     android:id="@+id/tv_jumlah_ulasan_mitra"
@@ -197,7 +207,7 @@
                                     android:fontFamily="@font/roboto"
                                     tools:text="23 Ulasan"
                                     android:textColor="@color/font_default"
-                                    android:textSize="12sp" />
+                                    android:textSize="14sp" />
 
                             </LinearLayout>
 
@@ -215,13 +225,27 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="16dp"
                 android:fontFamily="@font/roboto_bold"
-                tools:text="Rp. 200.000"
                 android:textColor="@color/font_default"
                 android:textSize="16sp"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/linearLayout11" />
+                app:layout_constraintTop_toBottomOf="@+id/linearLayout11"
+                tools:text="Rp. 200.000" />
+
+            <TextView
+                android:id="@+id/tv_harga_mitra_sebelum"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="12dp"
+                android:visibility="gone"
+                android:fontFamily="@font/roboto_bold"
+                android:textColor="@color/fontDiskon"
+                android:textSize="16sp"
+                app:layout_constraintBottom_toBottomOf="@+id/tv_harga_mitra"
+                app:layout_constraintStart_toEndOf="@+id/tv_harga_mitra"
+                app:layout_constraintTop_toTopOf="@+id/tv_harga_mitra"
+                tools:text="Rp. 200.000" />
 
             <TextView
                 android:id="@+id/tv_kategori_mitra"
@@ -232,7 +256,7 @@
                 android:fontFamily="@font/roboto"
                 tools:text="Kebersihan"
                 android:textColor="@color/fontDetailMitra"
-                android:textSize="12sp"
+                android:textSize="14sp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tv_harga_mitra" />
 
@@ -245,7 +269,7 @@
                 android:fontFamily="@font/roboto"
                 tools:text="Bergabung sejak 7 Mei 2020"
                 android:textColor="@color/fontDetailMitra"
-                android:textSize="12sp"
+                android:textSize="14sp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tv_kategori_mitra" />
 
@@ -257,7 +281,7 @@
                 android:background="@drawable/bg_outline_white_r4"
                 android:fontFamily="@font/roboto_bold"
                 android:paddingHorizontal="6dp"
-                android:paddingVertical="3dp"
+                android:paddingVertical="4dp"
                 android:text="Lihat Lokasi"
                 android:textColor="@color/colorPrimaryDark"
                 android:textSize="12sp"
@@ -270,13 +294,13 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="10dp"
                 android:ellipsize="end"
                 android:fontFamily="@font/roboto"
                 android:paddingEnd="12dp"
                 tools:text="Jalan Ngaliyan No. 123, Semarang"
                 android:textColor="@color/font_default"
-                android:textSize="12sp"
+                android:textSize="14sp"
                 app:layout_constraintEnd_toStartOf="@+id/btn_lihat_lokasi"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tv_mitra_bergabung" />
@@ -285,7 +309,7 @@
                 android:id="@+id/linear_sosmed"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="12dp"
+                android:layout_marginTop="16dp"
                 android:layout_marginStart="16dp"
                 android:orientation="horizontal"
                 app:layout_constraintStart_toStartOf="parent"
@@ -293,14 +317,14 @@
 
                 <ImageView
                     android:id="@+id/ic_instagram"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="28dp"
+                    android:layout_height="28dp"
                     android:background="@drawable/ic_instagram" />
 
                 <ImageView
                     android:id="@+id/ic_facebook"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="28dp"
+                    android:layout_height="28dp"
                     android:layout_marginStart="16dp"
                     android:background="@drawable/ic_facebook" />
 
@@ -330,8 +354,9 @@
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/viewPager"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:background="@color/colorBackground"
+        app:layout_constraintBottom_toTopOf="@+id/linear_pilihan_mitra"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/scrollView" />
