--- a/app/src/main/res/layout/fragment_list_shop.xml
+++ b/app/src/main/res/layout/fragment_list_shop.xml
@@ -18,8 +18,7 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingVertical="16dp">
+            android:layout_height="wrap_content">
 
             <ImageView
                 android:id="@+id/ic_back"
@@ -27,20 +26,20 @@
                 android:layout_height="28dp"
                 android:layout_marginStart="16dp"
                 android:background="@drawable/ic_baseline_arrow_back_24"
-                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintBottom_toBottomOf="@+id/tv_list_kategori_mitra"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="@+id/tv_list_kategori_mitra" />
 
             <TextView
                 android:id="@+id/tv_list_kategori_mitra"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
                 android:fontFamily="@font/roboto_bold"
                 android:text="Kebersihan"
                 android:textColor="@color/colorPrimaryDark"
                 android:textSize="20sp"
-                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/ic_back"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -51,9 +50,9 @@
                 android:layout_marginEnd="16dp"
                 android:gravity="center"
                 android:orientation="horizontal"
-                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintBottom_toBottomOf="@+id/tv_list_kategori_mitra"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
+                app:layout_constraintTop_toTopOf="@+id/tv_list_kategori_mitra">
 
                 <ImageView
                     android:layout_width="26dp"
@@ -75,6 +74,16 @@
 
             </LinearLayout>
 
+            <View
+                android:id="@+id/view1"
+                android:layout_width="match_parent"
+                android:layout_height="2dp"
+                android:layout_marginTop="16dp"
+                android:background="@color/colorLine"
+                app:layout_constraintTop_toBottomOf="@id/tv_list_kategori_mitra"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="@+id/ic_back" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </LinearLayout>
@@ -88,7 +97,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linear_title"
         tools:listitem="@layout/item_rv_list_shop" />
-
 
     <LinearLayout
         android:id="@+id/linear_empty_mitra"
