--- a/app/src/main/res/layout/item_rv_content_transaction.xml
+++ b/app/src/main/res/layout/item_rv_content_transaction.xml
@@ -56,7 +56,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         app:layout_constraintHorizontal_bias="0.0"
-                        android:fontFamily="@font/roboto"
+                        android:fontFamily="@font/roboto_medium"
                         android:maxLength="30"
                         android:maxLines="1"
                         android:ellipsize="end"
