--- a/app/src/main/res/layout/item_rv_penilaian.xml
+++ b/app/src/main/res/layout/item_rv_penilaian.xml
@@ -77,6 +77,7 @@
                             android:id="@+id/ic_verified"
                             android:layout_width="20dp"
                             android:layout_height="20dp"
+                            android:visibility="gone"
                             android:layout_marginStart="4dp"
                             android:background="@drawable/ic_baseline_check_circle_24" />
 
@@ -91,7 +92,7 @@
                         android:maxLines="1"
                         android:text="26 Okt 2020"
                         android:textColor="@color/font_default"
-                        android:textSize="13sp"
+                        android:textSize="12sp"
                         app:layout_constraintBottom_toBottomOf="@+id/linearmitra"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toTopOf="@+id/linearmitra" />
@@ -141,7 +142,7 @@
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_marginTop="16dp"
-        android:background="@color/colorLine"
+        android:background="@color/bgChat"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/lineardetail" />
