--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -33,7 +33,7 @@
     </style>
 
     <style name="tab_text_xxhdpi" parent="@android:style/TextAppearance.Widget.TabWidget">
-        <item name="android:fontFamily">@font/roboto</item>
+        <item name="android:fontFamily">@font/roboto_medium</item>
         <item name="android:textSize">14sp</item>
     </style>
 
@@ -73,6 +73,7 @@
         <item name="android:layout_height">56dp</item>
         <item name="android:textAllCaps">false</item>
         <item name="android:textSize">16sp</item>
+        <item name="android:letterSpacing">0</item>
         <item name="android:fontFamily">@font/roboto_bold</item>
         <item name="android:backgroundTint">@color/color_states_materialbutton</item>
         <item name="android:textColor">@android:color/white</item>
