--- a/mitrailifeapps/src/main/res/layout/fragment_create_shop_one.xml
+++ b/mitrailifeapps/src/main/res/layout/fragment_create_shop_one.xml
@@ -211,6 +211,7 @@
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/btn_next"
                 style="@style/ButtonStyle"
+                app:cornerRadius="8dp"
                 android:layout_marginTop="40dp"
                 android:text="@string/selanjutnya"
                 app:layout_constraintEnd_toEndOf="parent"
