--- a/mitrailifeapps/src/main/res/layout/fragment_dialog_kategori_shop.xml
+++ b/mitrailifeapps/src/main/res/layout/fragment_dialog_kategori_shop.xml
@@ -100,6 +100,7 @@
     <Button
         android:id="@+id/btn_pilih_kategori"
         style="@style/ButtonStyle"
+        app:cornerRadius="8dp"
         android:layout_marginStart="0dp"
         android:layout_marginEnd="0dp"
         android:layout_marginTop="32dp"
