--- a/mitrailifeapps/src/main/res/layout/fragment_dialog_tawar_jasa.xml
+++ b/mitrailifeapps/src/main/res/layout/fragment_dialog_tawar_jasa.xml
@@ -72,6 +72,7 @@
         android:id="@+id/btn_tawar"
         style="@style/ButtonStyle"
         android:enabled="false"
+        app:cornerRadius="8dp"
         android:layout_marginStart="24dp"
         android:layout_marginEnd="24dp"
         android:text="@string/tawarkan_jasa_anda"
