--- a/mitrailifeapps/src/main/res/layout/fragment_login.xml
+++ b/mitrailifeapps/src/main/res/layout/fragment_login.xml
@@ -94,6 +94,7 @@
             android:id="@+id/btn_login"
             android:layout_marginStart="24dp"
             android:layout_marginTop="28dp"
+            app:cornerRadius="8dp"
             android:layout_marginEnd="24dp"
             android:text="@string/masuk"
             style="@style/ButtonStyle" />
