--- a/mitrailifeapps/src/main/res/layout/fragment_order.xml
+++ b/mitrailifeapps/src/main/res/layout/fragment_order.xml
@@ -121,23 +121,64 @@
     </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvPesanan"
+        android:id="@+id/rv_pesanan"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cardView"
         app:layout_constraintBottom_toBottomOf="parent"
         tools:listitem="@layout/item_rv_pesanan" />
 
-    <include
-        layout="@layout/item_empty_shop"
-        android:layout_width="0dp"
+    <LinearLayout
+        android:id="@+id/linear_empty_toko"
+        style="@style/Responsive24dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="center"
+        android:visibility="gone"
+        android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cardView" />
+        app:layout_constraintTop_toBottomOf="@+id/cardView">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/ic_img_empty_toko"
+            android:contentDescription="@string/image_empty_toko" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
+            android:fontFamily="@font/roboto"
+            android:gravity="center"
+            android:text="@string/kamu_belom_memiliki_toko_disini_nyuk_segera_bikin_toko_kamu"
+            android:textColor="@color/font_default"
+            android:textSize="14sp" />
+
+        <LinearLayout
+            android:id="@+id/btn_tambah_toko"
+            android:layout_width="match_parent"
+            android:layout_height="52dp"
+            android:layout_marginTop="24dp"
+            android:background="@drawable/bg_btn_blue"
+            android:gravity="center">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/roboto_bold"
+                android:text="@string/tambah_toko"
+                android:textColor="@android:color/white"
+                android:textSize="16sp" />
+        </LinearLayout>
+
+
+    </LinearLayout>
 
     <LinearLayout
         android:id="@+id/linear_empty_pesanan"
