--- a/mitrailifeapps/src/main/res/layout/fragment_selesai.xml
+++ b/mitrailifeapps/src/main/res/layout/fragment_selesai.xml
@@ -697,6 +697,7 @@
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/btn_lihat_penilaian"
                 android:text="@string/lihat_penilaian"
+                app:cornerRadius="8dp"
                 style="@style/ButtonStyle"
                 android:layout_marginTop="40dp"
                 app:layout_constraintTop_toBottomOf="@+id/tv_metode_pembayaran"
