--- a/mitrailifeapps/src/main/res/values/themes.xml
+++ b/mitrailifeapps/src/main/res/values/themes.xml
@@ -18,11 +18,11 @@
 
     <style name="ButtonStyle">
         <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">52dp</item>
+        <item name="android:layout_height">58dp</item>
         <item name="android:textAllCaps">false</item>
         <item name="android:textSize">16sp</item>
         <item name="android:fontFamily">@font/roboto_bold</item>
-        <item name="android:background">@drawable/bg_btn_blue</item>
+        <item name="android:backgroundTint">@color/color_states_materialbutton</item>
         <item name="android:textColor">@android:color/white</item>
         <item name="android:letterSpacing">0</item>
         <item name="android:layout_marginStart">16dp</item>
