--- a/mitrailifeapps/src/main/res/layout/fragment_profile.xml
+++ b/mitrailifeapps/src/main/res/layout/fragment_profile.xml
@@ -130,8 +130,8 @@
         android:id="@+id/linear_toko"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:visibility="gone"
         android:layout_marginTop="20dp"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -251,6 +251,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:alpha="0.5"
+                    android:layout_marginStart="3dp"
                     android:fontFamily="@font/roboto"
                     android:textColor="@color/font_default"
                     android:textSize="12sp"
